@@ -1,0 +1,12 @@
+layer at (0,0) size 800x600
+  RenderView at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (8,8) size 784x584
+layer at (8,8) size 100x100
+  RenderBlock (positioned) {DIV} at (8,8) size 100x100 [bgcolor=#FF0000]
+    RenderBlock (floating) {DIV} at (0,0) size 100x20 [bgcolor=#008000]
+    RenderBlock (floating) {DIV} at (0,20) size 100x20 [bgcolor=#008000]
+    RenderBlock (floating) {DIV} at (0,40) size 100x20 [bgcolor=#008000]
+    RenderBlock (floating) {DIV} at (0,60) size 100x20 [bgcolor=#008000]
+    RenderBlock (floating) {DIV} at (0,80) size 100x20 [bgcolor=#008000]
