@@ -1,0 +1,22 @@
+<html>
+<head>
+    <title>Test for http://bugs.webkit.org/show_bug.cgi?id=12608</title>    
+    <style type="text/css">
+        div div { white-space: nowrap; float: left; clear: both; width: 100px; height: 20px; background-color: green; }
+    </style>
+</head>
+<body>
+    <div style="position: absolute; background-color: red;">
+        <div>
+        </div>
+        <div>
+        </div>
+        <div>
+        </div>
+        <div>
+        </div>
+        <div>
+        </div>
+    </div>
+</body>
+</html>
